--- a/pxc/docker-compose.yaml
+++ b/pxc/docker-compose.yaml
@@ -1,53 +1,74 @@
 version: "3"
 services:
-  db1:
+  node1:
     image: pxc:latest
     ports:
-      - "23313:3306"
+      - "3306"
     environment:
       - MYSQL_ROOT_PASSWORD=iiecas
       - XTRABACKUP_PASSWORD=iiecas
-      - CLUSTER_NAME=cluster2
+      - CLUSTER_NAME=cluster-1
     volumes:
-      - d1:/var/lib/mysql
+      - db1:/var/lib/mysql
       - backup:/data
-      - /home/leilei/pxc/conf:/etc/mysql/conf.d
-      - /home/leilei/pxc/initialdb:/docker-entrypoint-initdb.d
+      - ./conf:/etc/mysql/conf.d
+      - ./initialdb:/docker-entrypoint-initdb.d
     networks:
-      plot-network:
-    container_name: "db1" 
-  h3:
-    image: haproxy:latest
+      mysql-network:
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
+      placement:
+        constraints:
+          - node.role == manager
+  node2:
+    image: pxc:latest
     ports:
-      - "4005:8888"
-      - "4006:3306"
-    depends_on:
-      - db1
+      - "3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=iiecas
+      - XTRABACKUP_PASSWORD=iiecas
+      - CLUSTER_NAME=cluster-1
+      - CLUSTER_JOIN=node1
     volumes:
-      - /home/leilei/haproxy/h3:/usr/local/etc/haproxy
-      - /home/leilei/haproxy/keepalived/keepalived.conf:/etc/keepalived/keepalived.conf
-    command: haproxy -f /usr/local/etc/haproxy/haproxy.cfg && service keepalived start
-    restart: always
+      - db2:/var/lib/mysql
+      - backup:/data
+      - ./conf:/etc/mysql/conf.d
+      - ./initialdb:/docker-entrypoint-initdb.d
     networks:
-      plot-network:
-    container_name: "h3" 
-  h4:
-    image: haproxy:latest
+      mysql-network:
+    depends_on:
+      - node1
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
+      placement:
+        constraints:
+          - node.role == worker
+  ha:
+    image: haproxy:db
     ports:
-      - "4007:8888"
-      - "4008:3306"
-    depends_on:
-      - db1
+      - "8888"
+      - "8000"
     volumes:
-      - /home/leilei/haproxy/h4:/usr/local/etc/haproxy
-      - /home/leilei/haproxy/keepalived/keepalived.conf:/etc/keepalived/keepalived.conf
-    command: haproxy -f /usr/local/etc/haproxy/haproxy.cfg && service keepalived start
-    restart: always
+      - ./haproxy/h1:/usr/local/etc/haproxy
+    privileged: true
     networks:
-      plot-network:
-    container_name: "h4" 
+      mysql-network:
+    depends_on:
+      - node1
+      - node2
+    deploy:
+      replicas: 2
+      update_config:
+        parallelism: 1
+        delay: 10s
+      restart_policy:
+        condition: on-failure
 volumes:
-  d1:
+  db1:
   backup:
 networks:
-  plot-network:
+  mysql-network:
